--- a/public/home.html
+++ b/public/home.html
@@ -4,6 +4,11 @@
     <title></title>
   </head>
   <body>
-    <script src="build.js"></script>
+  <button id = 'login'>LOGIN BUTTON</button>
+  <button id = 'logout'>LOGOUT BUTTON</button>
+    <script type="jquery220.js"></script>
+    <script src="vendor.js"></script>
+    <script src="common.js"></script>
+    <script src="home.js"></script>
   </body>
 </html>
